--- a/scss/_main_small.scss
+++ b/scss/_main_small.scss
@@ -38,6 +38,17 @@ main {
   }
 }
 
+.weather-card {
+  height: 60px;
+  
+  .box-weather {
+    
+    img {
+      height: 80px;
+    }
+  }
+}
+
 .card-red, .card-green, .card-blue {
   height: 60px;
 }
