--- a/template/emissions/home.html
+++ b/template/emissions/home.html
@@ -81,7 +81,7 @@
         <div class="col-xl-6">
             <div class="card">
                 <div class="card-title">
-                    <span>지난 CO2 배출량</span>
+                    <span>이전 배출량</span>
                     <select id="past-emission-chart-date-selector">
                     </select>
                     <select id="yearly-monthly-selector">
@@ -119,7 +119,7 @@
                     <span>예측 배출량</span>
                 </div>
                 <div class="chart">
-                    <iframe id="" src="" frameborder="0"></iframe>
+                    <iframe id="prediction-chart" src="" frameborder="0"></iframe>
                 </div>
                 <ul class="chart-info">
                     <li class="info-item">
