--- a/template/emissions/home.html
+++ b/template/emissions/home.html
@@ -42,7 +42,7 @@
                         <span>예상 초과 배출량</span>
                     </div>
                     <div class="box-value">
-                        <span>-</span>
+                        <span id="expected-over-emissions">-</span>
                     </div>
                 </div>
             </div>
@@ -124,10 +124,10 @@
                 <ul class="chart-info">
                     <li class="info-item">
                         <div class="info-value">
-                            <span id="">-</span>
+                            <span id="this-year-total-prediction-emissions">-</span>
                         </div>
                         <div class="info-description">
-                            <span>총 예측 배출량</span>
+                            <span>올해 총 예측 배출량</span>
                         </div>
                     </li>
                     <li class="info-item">
