--- a/scss/main.scss
+++ b/scss/main.scss
@@ -326,6 +326,7 @@ main {
     
     span {
       font-size: 30px;
+      padding-bottom: 3px;
     }
   }
   
@@ -395,7 +396,7 @@ main {
     
     td, th {
       font-weight: 400;
-      padding: 7px 15px;
+      padding: 6px 15px;
     }
   }
 }
