--- a/template/emissions/workplace1.html
+++ b/template/emissions/workplace1.html
@@ -144,10 +144,10 @@
                 <ul class="chart-info">
                     <li class="info-item">
                         <div class="info-value">
-                            <span id="">-</span>
+                            <span id="this-year-total-prediction-emissions">-</span>
                         </div>
                         <div class="info-description">
-                            <span>총 예측 배출량</span>
+                            <span>올해 총 예측 배출량</span>
                         </div>
                     </li>
                     <li class="info-item">
