--- a/template/layout/base.html
+++ b/template/layout/base.html
@@ -62,15 +62,8 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a href="/cer">
-                        <span>탄소배출권</span>
-<!--                        <img src="images/svg/arrow.svg">-->
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="/control">
-                        <span>제어</span>
-<!--                        <img src="images/svg/arrow.svg">-->
+                    <a href="/data">
+                        <span>데이터 입력</span>
                     </a>
                 </li>
             </ul>
