--- a/template/layout/base.html
+++ b/template/layout/base.html
@@ -35,7 +35,10 @@
             <ul class="sidebar-nav-links">
                 <li class="nav-item">
                     <a href="#">
-                        <span>CO2 배출량</span>
+                        <div>
+                            <img src="images/svg/sidebar/chart.svg" alt="">
+                            <span>CO2 배출량</span>
+                        </div>
                         <img src="images/svg/arrow.svg">
                     </a>
                     <ul class="sidebar-detail-nav-links">
@@ -62,8 +65,11 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a href="/data">
-                        <span>데이터 입력</span>
+                    <a href="/writingData">
+                        <div>
+                            <img src="images/svg/sidebar/writing.svg" alt="">
+                            <span>데이터 입력</span>
+                        </div>
                     </a>
                 </li>
             </ul>
