fix hover effect of sidebar icon

--- a/scss/_main_big.scss
+++ b/scss/_main_big.scss
@@ -50,6 +50,14 @@ main {
           &:hover {
             background-color: $sidebarHoverBackgroundColor;
             color: $sidebarHoverFontColor;
+            
+            #ic-chart {
+              background-image: url("/images/svg/sidebar/chart-active.svg");
+            }
+  
+            #ic-writing {
+              background-image: url("/images/svg/sidebar/writing-active.svg");
+            }
           }
         }
         
