--- a/scss/_main_common.scss
+++ b/scss/_main_common.scss
@@ -16,7 +16,7 @@
 $headerFontColor: #222222;
 $headerBackgroundColor: #FFFFFF;
 $headerHoverFontColor: #222222;
-$headerHoverBackgroundColor: #EFEFEF;
+$headerHoverBackgroundColor: #E4E4F6;
 $headerHeight: 50px;
 
 // sidebar
