--- a/template/layout/base.html
+++ b/template/layout/base.html
@@ -36,7 +36,7 @@
                 <li class="nav-item">
                     <a href="#">
                         <div>
-                            <img src="images/svg/sidebar/chart.svg" alt="">
+                            <div class="sidebar-icon" id="ic-chart"></div>
                             <span>CO2 배출량</span>
                         </div>
                         <img src="images/svg/arrow.svg">
@@ -67,7 +67,7 @@
                 <li class="nav-item">
                     <a href="/writingData">
                         <div>
-                            <img src="images/svg/sidebar/writing.svg" alt="">
+                            <div class="sidebar-icon" id="ic-writing"></div>
                             <span>데이터 입력</span>
                         </div>
                     </a>
