--- a/scss/main.scss
+++ b/scss/main.scss
@@ -157,10 +157,21 @@ main {
           div {
             display: flex;
             align-items: center;
-          
-            img {
+            
+            .sidebar-icon {
               height: 20px;
+              width: 20px;
               margin-right: 10px;
+              transition-duration: 0.5s;
+              background-size: 20px 20px;
+            }
+            
+            #ic-chart {
+              background-image: url("/images/svg/sidebar/chart.svg");
+            }
+            
+            #ic-writing {
+              background-image: url("/images/svg/sidebar/writing.svg");
             }
             
             span {
