--- a/template/emissions/home.html
+++ b/template/emissions/home.html
@@ -15,7 +15,7 @@
             <div class="card card-red">
                 <div class="center-box">
                     <div class="box-title">
-                        <span>올해 누적 CO2 배출량</span>
+                        <span>올해 총 배출량</span>
                     </div>
                     <div class="box-value">
                         <span id="this-year-total-emissions">-</span>
@@ -27,7 +27,7 @@
             <div class="card card-green">
                 <div class="center-box">
                     <div class="box-title">
-                        <span>올해 남은 허용 CO2 배출량</span>
+                        <span>올해 남은 허용 배출량</span>
                     </div>
                     <div class="box-value">
                         <span id="this-year-remaining-permissible-emissions">-</span>
