--- a/scss/main.scss
+++ b/scss/main.scss
@@ -162,7 +162,6 @@ main {
               height: 20px;
               width: 20px;
               margin-right: 10px;
-              transition-duration: 0.5s;
               background-size: 20px 20px;
             }
             
@@ -213,6 +212,14 @@ main {
       > a {
         background-color: $sidebarHoverBackgroundColor !important;
         color: $sidebarHoverFontColor !important;
+  
+        #ic-chart {
+          background-image: url("/images/svg/sidebar/chart-active.svg") !important;
+        }
+  
+        #ic-writing {
+          background-image: url("/images/svg/sidebar/writing-active.svg") !important;
+        }
   
         > img {
           transform: rotate(90deg);
