--- a/template/emissions/workplace3.html
+++ b/template/emissions/workplace3.html
@@ -15,7 +15,7 @@
             <div class="card card-red">
                 <div class="center-box">
                     <div class="box-title">
-                        <span>올해 누적 CO2 배출량</span>
+                        <span>올해 총 배출량</span>
                     </div>
                     <div class="box-value">
                         <span id="this-year-total-emissions">-</span>
