--- a/template/layout/base.html
+++ b/template/layout/base.html
@@ -49,17 +49,17 @@
                         </li>
                         <li class="nav-item">
                             <a href="/emissions/workplace1">
-                                <span>사업장 1</span>
+                                <span>서울 사업장</span>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="/emissions/workplace2">
-                                <span>사업장 2</span>
+                                <span>수원 사업장</span>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="/emissions/workplace3">
-                                <span>사업장 3</span>
+                                <span>인천 사업장</span>
                             </a>
                         </li>
                     </ul>
