--- a/template/emissions/workplace3.html
+++ b/template/emissions/workplace3.html
@@ -1,4 +1,4 @@
-{% set title = "탄소배출량 산정 시스템 : CO2 배출량 - 3번 사업장" %}
+{% set title = "탄소배출량 산정 시스템 : CO2 배출량 - 인천 사업장" %}
 {% extends "layout/base.html" %}
 
 {%  block content -%}
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-12">
             <div class="container-title">
-                <span>CO2 배출량 - 3번 사업장</span>
+                <span>CO2 배출량 - 인천 사업장</span>
             </div>
         </div>
     </div>
