--- a/template/emissions/workplace3.html
+++ b/template/emissions/workplace3.html
@@ -39,7 +39,7 @@
         </div>
         <div class="col-xl-4">
             <div class="card status-card">
-                <table class="table table-borderless">
+                <table class="table table-borderless table-custom1">
                     <thead>
                     <tr>
                         <th scope="col">센서</th>
