--- a/css/main.css
+++ b/css/main.css
@@ -472,7 +472,7 @@ main .content-container .content-main {
 }
 
 .table {
-  margin: 0;
+  margin-bottom: 0;
 }
 
 .table-custom1 {
@@ -493,6 +493,7 @@ main .content-container .content-main {
 .table-custom2 {
   font-size: 15px;
   width: 100%;
+  margin-top: 1px;
 }
 .table-custom2 thead {
   border-bottom: 3px double #DDDDDD;
@@ -509,7 +510,7 @@ main .content-container .content-main {
 }
 
 #pie-chart {
-  height: 178px;
+  height: 177px;
   width: 99.9%;
 }
 
