--- a/scss/main.scss
+++ b/scss/main.scss
@@ -413,7 +413,7 @@ main {
 }
 
 .table {
-  margin: 0;
+  margin-bottom: 0;
 }
 
 .table-custom1 {
@@ -440,6 +440,7 @@ main {
 .table-custom2 {
   font-size: 15px;
   width: 100%;
+  margin-top: 1px;
   
   thead {
     border-bottom: 3px double #DDDDDD;
@@ -460,6 +461,6 @@ main {
 }
 
 #pie-chart {
-  height: 178px;
+  height: 177px;
   width: 99.9%;
 }
