--- a/template/emissions/home.html
+++ b/template/emissions/home.html
@@ -113,6 +113,8 @@
                 </ul>
             </div>
         </div>
+    </div>
+    <div class="row">
         <div class="col-xl-6">
             <div class="card">
                 <div class="card-title">
