--- a/template/emissions/workplace1.html
+++ b/template/emissions/workplace1.html
@@ -133,6 +133,8 @@
                 </ul>
             </div>
         </div>
+    </div>
+    <div class="row">
         <div class="col-xl-6">
             <div class="card">
                 <div class="card-title">
