--- a/template/emissions/workplace1.html
+++ b/template/emissions/workplace1.html
@@ -42,9 +42,9 @@
                 <table class="table table-borderless table-custom1">
                     <thead>
                     <tr>
-                        <th scope="col">센서</th>
-                        <th scope="col">LED 전등</th>
-                        <th scope="col">연결 상태</th>
+                        <th scope="col" style="width: 33%">센서</th>
+                        <th scope="col" style="width: 33%">LED 전등</th>
+                        <th scope="col" style="width: 33%">연결 상태</th>
                     </tr>
                     </thead>
                     <tbody>
