--- a/css/main.css
+++ b/css/main.css
@@ -480,10 +480,14 @@ main .content-container .content-main {
 }
 .table-custom1 thead {
   border-bottom: 1px solid #DDDDDD;
+  text-align: center;
 }
 .table-custom1 thead td, .table-custom1 thead th {
   font-weight: 400;
   padding: 6px 15px;
+}
+.table-custom1 tbody {
+  text-align: center;
 }
 .table-custom1 tbody td, .table-custom1 tbody th {
   font-weight: 400;
