modify table interval

--- a/template/emissions/home.html
+++ b/template/emissions/home.html
@@ -150,9 +150,9 @@
                 <table class="table table-custom2">
                     <thead>
                     <tr>
-                        <th scope="col" style="width: 23%">사업장 명</th>
-                        <th scope="col" style="width: 54%">올해 배출량</th>
-                        <th scope="col" style="width: 23%">기여도</th>
+                        <th scope="col" style="width: 120px">사업장 명</th>
+                        <th scope="col" style="">올해 배출량</th>
+                        <th scope="col" style="width: 80px">기여도</th>
                     </tr>
                     </thead>
                     <tbody>
