--- a/template/emissions/workplace1.html
+++ b/template/emissions/workplace1.html
@@ -42,24 +42,24 @@
                 <table class="table table-borderless table-custom1">
                     <thead>
                     <tr>
-                        <th scope="col" style="width: 90px">센서</th>
-                        <th scope="col" style="">LED 전등</th>
-                        <th scope="col" style="width: 90px">연결 상태</th>
+                        <th scope="col" style="width: 90px"><span>센서</span></th>
+                        <th scope="col" style=""><span>LED 전등</span></th>
+                        <th scope="col" style="width: 90px"><span>연결 상태</span></th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
-                        <th scope="row">가스 센서</th>
+                        <th scope="row"><span>가스 센서</span></th>
                         <td><input type="checkbox" id="gas-censor-toggle-btn"></td>
                         <td><img src="images/svg/green_circle.svg" alt=""></td>
                     </tr>
                     <tr>
-                        <th scope="row">유속 센서</th>
+                        <th scope="row"><span>유속 센서</span></th>
                         <td><input type="checkbox" id="flow-censor-toggle-btn"></td>
                         <td><img src="images/svg/green_circle.svg" alt=""></td>
                     </tr>
                     <tr>
-                        <th scope="row">온도 센서</th>
+                        <th scope="row"><span>온도 센서</span></th>
                         <td><input type="checkbox" id="temp-censor-toggle-btn"></td>
                         <td><img src="images/svg/red_circle.svg" alt=""></td>
                     </tr>
