change location name

--- a/template/emissions/home.html
+++ b/template/emissions/home.html
@@ -162,12 +162,12 @@
                         <td><span id="location1-contribution">-</span></td>
                     </tr>
                     <tr>
-                        <th scope="row">수원 사업장</th>
+                        <th scope="row">청주 사업장</th>
                         <td><span id="location2-this-year-emissions">-</span></td>
                         <td><span id="location2-contribution">-</span></td>
                     </tr>
                     <tr>
-                        <th scope="row">인천 사업장</th>
+                        <th scope="row">오산 사업장</th>
                         <td><span id="location3-this-year-emissions">-</span></td>
                         <td><span id="location3-contribution">-</span></td>
                     </tr>
