--- a/template/layout/base.html
+++ b/template/layout/base.html
@@ -54,12 +54,12 @@
                         </li>
                         <li class="nav-item">
                             <a href="/emissions/workplace2">
-                                <span>수원 사업장</span>
+                                <span>청주 사업장</span>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="/emissions/workplace3">
-                                <span>인천 사업장</span>
+                                <span>오산 사업장</span>
                             </a>
                         </li>
                     </ul>
